--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "egg-view-ejs": "^2.0.0",
     "egg-view-nunjucks": "^2.2.0",
     "md5": "^2.2.1",
+    "mz-modules": "^2.1.0",
     "svg-captcha": "^1.3.12"
   },
   "devDependencies": {
